# aaronshim.github.io

./: .gitignore  CNAME  LICENSE  README.md  _config.yml  about.html  about.md  archive.md  cabal.project  flake.nix  humans.txt  imprint.html  index.html  music.html  travels.html
.devcontainer/: devcontainer.json
.github/workflows/: main.yml  prebuild.yml
_data/: projects.yml  travels.yml
_includes/: about.html  footer.html  head.html  header.html  map.html  projects.html  sidebar.html
_layouts/: blog-page.html  page.html  post.html
_posts/: 2014-08-23-test1.md  2014-08-24-test2.md  2014-08-25-test3.md  2014-08-26-test4.md  2014-08-27-test5.md  2014-08-28-test6.md  2015-01-04-day1.md  2015-01-06-day2and3.md
angular/angular-movies-csp/: index.html  main.js  ngsw.json  projects_movies_src_app_pages_account-feature_list-detail-page_list-image_list-image_componen-cb4b89.js
angular/angular-movies-csp-ordered/: index.html  main.js  ngsw.json  projects_movies_src_app_pages_account-feature_list-detail-page_list-detail-page_component_ts--a2c81d.js
angular/angular-movies-unchanged/: common.js  common.js.map  default-node_modules_rx-angular_template_fesm2022_template-if_mjs.js  default-node_modules_rx-angular_template_fesm2022_template-if_mjs.js.map  default-projects_movies_src_app_pages_account-feature_list-detail-page_list-detail-page_adapter_ts.js  default-projects_movies_src_app_pages_account-feature_list-detail-page_list-detail-page_adapter_ts.js.map  default-projects_movies_src_app_shared_cdk_image_image-tag_transform_ts-projects_movies_src_a-4d8953.js  default-projects_movies_src_app_ui_pattern_movie-list_movie-list_component_ts.js  default-projects_movies_src_app_ui_pattern_movie-list_movie-list_component_ts.js.map  index.html  main.js  main.js.map  ngsw.json  projects_movies_src_app_app-shell_account-menu_account-menu_component_ts.js  (+35 more)
angular/angular-toh-csp-ordered/: index.html  main-BAOMYPCQ.js
blog/: index.html
doc/: _index.html  file.README.html  index.html  top-level-namespace.html
src/: index.html  music.md  posts.html  projects.md  resume.yml  work.md
ssg/: ssg.cabal
ssg/lib/: Csp.hs  StrictCsp.hs
ssg/src/: GhcVersionResolver.hs  Main.hs  PandocCollapsible.hs  PandocToc.hs
ssg/test/: CspSpec.hs  GhcVersionResolverSpec.hs
styles/: main.css
(+16 files in other folders)
