cabal-version:       3.6

name:                ssg
version:             0.1.0.0
build-type:          Simple
license:             BSD-3-Clause
license-file:        LICENSE

-- Common dependencies and options can be defined here (optional)
common common-settings
    ghc-options:     -Wall
                     -Wcompat
                     -Widentities
                     -Wincomplete-record-updates
                     -Wincomplete-uni-patterns
                     -Wpartial-fields
                     -Wredundant-constraints
    build-depends:   base == 4.*  
                   , text >= 1 && < 3    
    default-language: Haskell2010

-- Define the library components, including Csp
library
    import:          common-settings       
    -- expose Csp module if needed by other internal components (like tests)
    exposed-modules: Csp, StrictCsp
    -- other-modules:    -- List other internal library modules if any
    hs-source-dirs:  lib
    build-depends:
        -- Dependencies for Csp module (Added)
        aeson             >= 2.1 && < 2.3,
        base64-bytestring >= 1.2 && < 1.3,
        bytestring        >= 0.11 && < 0.12,
        cryptonite        >= 0.30 && < 0.31,
        tagsoup           >= 0.14 && < 0.15,
        memory            >= 0.18,

executable hakyll-site
    import:          common-settings       
    main-is:         Main.hs
    hs-source-dirs:  src
    build-depends:
        -- Depend on the internal library defined above (Changed)
        ssg, 
        -- Dependencies specific to the executable
        hakyll            == 4.16.*,
        pandoc            >= 2.11,
        filepath          >= 1.0,
        slugger           >= 0.1.0.2,
    ghc-options:     -O2
                     -threaded
                     -rtsopts
                     -with-rtsopts=-N

-- Test suite for Csp (Added)
test-suite csp-test
    import:          common-settings
    type:            exitcode-stdio-1.0
    main-is:         CspSpec.hs
    hs-source-dirs:  test
    build-depends:
        -- Depend on the internal library
        ssg,
        -- Test dependencies
        hspec >= 2.7 && < 2.12,
        text
    ghc-options:     -threaded -rtsopts -with-rtsopts=-N